add 404 page, add speakers to landing

--- a/app/index.html
+++ b/app/index.html
@@ -15,7 +15,8 @@
   <meta name="theme-color" content="#ffffff">
   <!-- Place favicon.ico in the root directory -->
   <link href="https://fonts.googleapis.com/css?family=Exo+2:400,700&amp;subset=cyrillic,latin-ext" rel="stylesheet">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
+        integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
   <!-- build:css styles/vendor.css -->
   <!-- bower:css -->
   <!-- endbower -->
@@ -54,7 +55,8 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="schedule.html">Schedule</a></li>
             <li><a href="speakers.html">Speakers</a></li>
-            <li><a target="_blank" href="https://imaguru.by/product/the-rolling-scopes-conference-2019/">Tickets</a></li>
+            <li><a target="_blank" href="https://imaguru.by/product/the-rolling-scopes-conference-2019/">Tickets</a>
+            </li>
             <li><a href="venue.html">Venue</a></li>
             <li><a href="partners.html">Partners</a></li>
             <li><a href="contacts.html">Contacts</a></li>
@@ -103,7 +105,8 @@
             August 9-11, 2019
             <br><span class="city-address">Minsk, Belarus</span></p>
 
-          <p><a target="_blank" class="btn" href="https://imaguru.by/product/the-rolling-scopes-conference-2019/"> Buy a Ticket</a></p>
+          <p><a target="_blank" class="btn" href="https://imaguru.by/product/the-rolling-scopes-conference-2019/"> Buy a
+            Ticket</a></p>
           <!--<p class="placeholder-btn"> Not on sale yet</p>-->
 
           <p>Follow us on <a target="_blank" href="https://twitter.com/rollingscopes">Twitter</a> or
@@ -115,11 +118,12 @@
           <h2>Follow us</h2>
           <p>Follow us on social media, our hashtag #rollingscopes</p>
           <ul class="social-links">
-            <li><a target="_blank" href="http://frontendbelarus.herokuapp.com/"><i class="fab fa-slack-hash"></i></a></li>
+            <li><a target="_blank" href="http://frontendbelarus.herokuapp.com/"><i class="fab fa-slack-hash"></i></a>
+            </li>
             <li><a target="_blank" href="https://www.facebook.com/groups/TheRollingScopes/"><i
               class="fab fa-facebook-f"></i></a></li>
             <li><a target="_blank" href="https://www.youtube.com/user/therollingscopes"><i class="fab fa-youtube"
-                                                                                            ></i></a>
+            ></i></a>
             </li>
             <li><a target="_blank" href="https://vk.com/therollingscopes"><i class="fab fa-vk"></i></a></li>
             <li><a target="_blank" href="https://twitter.com/rollingscopes"><i class="fab fa-twitter"></i></a></li>
@@ -141,8 +145,9 @@
         amazing
         people of the front-end scene.</p>
       <p>
-      <a target="_blank" class="btn" href="https://imaguru.by/product/the-rolling-scopes-conference-2019/">Buy Tickets</a>
-      <!--<a class="btn" href="schedule.html">See Schedule</a>-->
+        <a target="_blank" class="btn" href="https://imaguru.by/product/the-rolling-scopes-conference-2019/">Buy
+          Tickets</a>
+        <!--<a class="btn" href="schedule.html">See Schedule</a>-->
       </p>
 
       <p><a class="btn" target="_blank"
@@ -151,22 +156,7 @@
                             href="mailto:rolling.scopes@gmail.com">Become
         a Sponsor</a></p>
     </div>
-    <div class="content-lg">
-      <h2 class="padding-top-lg">How it was in 2018</h2>
-      <p>
-        <a target="_blank" class="btn"
-           href="https://photos.google.com/share/AF1QipMzMhdLPzHn0ncQGBByF2RC-YWXaI9eYMom3MGggduOPdeW9dk-2u5qPkqc8EWZNw?key=VmZTTl9DZDZnVzJkUmlaaXVSQkhwTGNnNHJyTU13">Photos
-          Day 1</a>
-        <a target="_blank" class="btn"
-           href="https://photos.google.com/share/AF1QipNtwulzUpG_uTaKJdMsEzWLWKgCZHZ4Wkai4mHHcfp27meKUn5J1K8W-p5vUAyGvg?key=ZTI0V3E0S3pIWlNlR2dGV2gwWktrLVFZSklITlJ3">Photos
-          Day 2</a>
-        <a target="_blank" class="btn"
-           href="https://www.youtube.com/watch?v=57m27q_xE68&list=PLe--kalBDwjgH1MQpttWyHmDR98Q404Tn">Videos</a>
 
-        <a target="_blank" class="btn"
-           href="https://drive.google.com/drive/folders/1DyFU2UQF2B8BXAVZn6uc-W1rIwc32_k9">Slides</a>
-      </p>
-    </div>
   </section>
   <section data-color="#BB94FF">
     <div class="content-md">
@@ -183,83 +173,60 @@
                               href="https://youtu.be/JPdm-lcISBM">video</a>
         on our Youtube channel.</p>
     </div>
+
   </section>
-  <!--<section data-color="#FC94FC">-->
-  <!--<div class="content-lg">-->
+  <section data-color="#FC94FC">
+    <div class="content-lg">
 
-  <!--<h2>Speakers</h2>-->
-  <!--<ul class="speaker-list">-->
-  <!--<li>-->
-  <!--<figure>-->
-  <!--<img src="images/speakers/martin_splitt.svg" alt="">-->
-  <!--<figcaption><h3><a href="speaker/martin-splitt.html">Martin Splitt</a></h3>-->
-  <!--<p>Zürich, Switzerland</p>-->
-  <!--</figcaption>-->
-  <!--</figure>-->
-  <!--</li>-->
-  <!--<li>-->
-  <!--<figure>-->
-  <!--<img src="images/speakers/asim_hussain.svg" alt="">-->
-  <!--<figcaption><h3><a href="speaker/asim-hussain.html">Asim Hussain</a></h3>-->
-  <!--<p>London, United Kingdom</p>-->
-  <!--</figcaption>-->
-  <!--</figure>-->
-  <!--</li>-->
-  <!--<li>-->
-  <!--<figure>-->
-  <!--<img src="images/speakers/anna_selezniova.svg" alt="Anna Selezniova">-->
-  <!--<figcaption><h3><a href="speaker/anna-selezniova.html">Anna Selezniova</a></h3>-->
-  <!--<p>Minsk, Belarus</p>-->
-  <!--</figcaption>-->
-  <!--</figure>-->
-  <!--</li>-->
-  <!--<li>-->
-  <!--<figure>-->
-  <!--<img src="images/speakers/ivan_jovanovic.svg" alt="">-->
-  <!--<figcaption><h3><a href="speaker/ivan-jovanovic.html">Ivan Jovanovic</a></h3>-->
-  <!--<p>Belgrade, Republic of Serbia</p>-->
-  <!--</figcaption>-->
-  <!--</figure>-->
-  <!--</li>-->
-  <!--<li>-->
-  <!--<figure>-->
-  <!--<img src="images/speakers/vsevolod_shmyrov.svg" alt="">-->
-  <!--<figcaption><h3><a href="speaker/vsevolod-shmyrov.html">Vsevolod Shmyrov</a></h3>-->
-  <!--<p>Moscow, Russia</p>-->
-  <!--</figcaption>-->
-  <!--</figure>-->
-  <!--</li>-->
-  <!--<li>-->
-  <!--<figure>-->
-  <!--<img src="images/speakers/konstantin_krivlenia.svg" alt="">-->
-  <!--<figcaption><h3><a href="speaker/konstantin-krivlenia.html">Konstantin Krivlenia</a></h3>-->
-  <!--<p>Minsk, Belarus</p>-->
-  <!--</figcaption>-->
-  <!--</figure>-->
-  <!--</li>-->
-  <!--<li>-->
-  <!--<figure>-->
-  <!--<img src="images/speakers/vasiliy_vanchuk.svg" alt="">-->
-  <!--<figcaption><h3><a href="speaker/vasiliy-vanchuk.html">Vasiliy Vanchuk</a></h3>-->
-  <!--<p>Minsk, Belarus</p>-->
-  <!--</figcaption>-->
-  <!--</figure>-->
-  <!--</li>-->
-  <!--<li>-->
-  <!--<figure>-->
-  <!--<img src="images/speakers/alexey_migutsky.svg" alt="Alexey Migutsky">-->
-  <!--<figcaption><h3><a href="speaker/alexey-migutsky.html">Alexey Migutsky</a></h3>-->
-  <!--<p>Berlin, Germany</p>-->
-  <!--</figcaption>-->
-  <!--</figure>-->
-  <!--</li>-->
-  <!--</ul>-->
+      <h2>Speakers</h2>
 
-  <!--<h3>-->
-  <!--<a href="speakers.html">See all speakers</a>-->
-  <!--</h3>-->
-  <!--</div>-->
-  <!--</section>-->
+      <ul class="speaker-list">
+        <li>
+          <figure>
+            <img src="images/speakers/andrei-lesnitsky.jpg" alt="Andrei Lesnitsky photo">
+            <figcaption>
+              <h3><a href="speakers/andrei-lesnitsky.html">Andrei Lesnitsky</a></h3>
+              <p>Minsk, Belarus</p>
+            </figcaption>
+          </figure>
+        </li>
+
+        <li>
+          <figure>
+            <img src="images/speakers/andre-gloukhmantchouk.jpg" alt="Andre Gloukhmantchouk photo">
+            <figcaption>
+              <h3><a href="speakers/andre-gloukhmantchouk.html">Andre Gloukhmantchouk</a></h3>
+              <p>Los Angeles, California</p>
+            </figcaption>
+          </figure>
+        </li>
+
+        <li>
+          <figure>
+            <img src="images/speakers/alexander-gerasimov.jpg" alt="Alex Gerasimov photo">
+            <figcaption>
+              <h3><a href="speakers/alexander-gerasimov.html">Alex Gerasimov</a></h3>
+              <p>Berlin, Germany</p>
+            </figcaption>
+          </figure>
+        </li>
+
+        <li>
+          <figure>
+            <img src="images/speakers/martin-splitt.jpg" alt="Martin Splitt photo">
+            <figcaption>
+              <h3><a href="speakers/martin-splitt.html">Martin Splitt</a></h3>
+              <p>Zürich, Switzerland</p>
+            </figcaption>
+          </figure>
+        </li>
+      </ul>
+
+      <h3>
+        <a href="speakers.html">See all speakers</a>
+      </h3>
+    </div>
+  </section>
   <section data-color="#F8EF5A">
     <div class="content-md">
       <h2>Venue</h2>
@@ -282,9 +249,27 @@
                                                     href="https://t.me/joinchat/HqpGRxPNqkR9TbsVH20Jzg">RS Conf 2019</a>
       </p>
       <p class="text-md">Follow us on <a target="_blank"
-                                                        href="https://www.facebook.com/groups/TheRollingScopes/">Facebook</a> and <a
+                                         href="https://www.facebook.com/groups/TheRollingScopes/">Facebook</a> and <a
         target="_blank" href="https://twitter.com/rollingscopes">Twitter</a>
         to be the first to learn the news</p>
+    </div>
+  </section>
+  <section class="announcement" data-color="#CDE525">
+    <div class="content-lg">
+      <h2 class="padding-top-lg">How it was in 2018</h2>
+      <p>
+        <a target="_blank" class="btn"
+           href="https://photos.google.com/share/AF1QipMzMhdLPzHn0ncQGBByF2RC-YWXaI9eYMom3MGggduOPdeW9dk-2u5qPkqc8EWZNw?key=VmZTTl9DZDZnVzJkUmlaaXVSQkhwTGNnNHJyTU13">Photos
+          Day 1</a>
+        <a target="_blank" class="btn"
+           href="https://photos.google.com/share/AF1QipNtwulzUpG_uTaKJdMsEzWLWKgCZHZ4Wkai4mHHcfp27meKUn5J1K8W-p5vUAyGvg?key=ZTI0V3E0S3pIWlNlR2dGV2gwWktrLVFZSklITlJ3">Photos
+          Day 2</a>
+        <a target="_blank" class="btn"
+           href="https://www.youtube.com/watch?v=57m27q_xE68&list=PLe--kalBDwjgH1MQpttWyHmDR98Q404Tn">Videos</a>
+
+        <a target="_blank" class="btn"
+           href="https://drive.google.com/drive/folders/1DyFU2UQF2B8BXAVZn6uc-W1rIwc32_k9">Slides</a>
+      </p>
     </div>
   </section>
   <section data-color="#CDE525">
@@ -385,11 +370,12 @@
     <div class="content-md">
       <h2>Follow us</h2>
       <p class="text-lg">Join our Telegram group <a target="_blank"
-                                                                  href="https://t.me/joinchat/HqpGRxPNqkR9TbsVH20Jzg">RS Conf 2019</a>
+                                                    href="https://t.me/joinchat/HqpGRxPNqkR9TbsVH20Jzg">RS Conf 2019</a>
       </p>
       <p class="text-lg padding-top-lg">Follow us on <a target="_blank"
-                                         href="https://www.facebook.com/groups/TheRollingScopes/">Facebook</a> and <a
-        target="_blank" href="https://twitter.com/rollingscopes">Twitter</a>
+                                                        href="https://www.facebook.com/groups/TheRollingScopes/">Facebook</a>
+        and <a
+          target="_blank" href="https://twitter.com/rollingscopes">Twitter</a>
         to be the first to learn the news</p>
 
       <p class="content-xsm">Our hashtag on social media is <a
@@ -401,7 +387,7 @@
         <li><a target="_blank" href="https://www.facebook.com/groups/TheRollingScopes/"><i
           class="fab fa-facebook-f"></i></a></li>
         <li><a target="_blank" href="https://www.youtube.com/user/therollingscopes"><i class="fab fa-youtube"
-                                                                                        ></i></a>
+        ></i></a>
         </li>
         <li><a target="_blank" href="https://vk.com/therollingscopes"><i class="fab fa-vk"></i></a></li>
         <li><a target="_blank" href="https://twitter.com/rollingscopes"><i class="fab fa-twitter"></i></a></li>
