--- a/app/speakers.html
+++ b/app/speakers.html
@@ -14,7 +14,8 @@
   <meta name="msapplication-TileColor" content="#603cba">
   <meta name="theme-color" content="#ffffff">  <!-- Place favicon.ico in the root directory -->
   <link href="https://fonts.googleapis.com/css?family=Exo+2:400,700&amp;subset=cyrillic,latin-ext" rel="stylesheet">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
+        integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
   <!-- build:css styles/vendor.css -->
   <!-- bower:css -->
   <!-- endbower -->
@@ -56,7 +57,8 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="schedule.html">Schedule</a></li>
             <li><a href="speakers.html">Speakers</a></li>
-            <li><a target="_blank" href="https://imaguru.by/product/the-rolling-scopes-conference-2019/">Tickets</a></li>
+            <li><a target="_blank" href="https://imaguru.by/product/the-rolling-scopes-conference-2019/">Tickets</a>
+            </li>
             <li><a href="venue.html">Venue</a></li>
             <li><a href="partners.html">Partners</a></li>
             <li><a href="contacts.html">Contacts</a></li>
@@ -105,7 +107,8 @@
             August 9-11, 2019
             <br><span class="city-address">Minsk, Belarus</span></p>
 
-          <p><a target="_blank" class="btn" href="https://imaguru.by/product/the-rolling-scopes-conference-2019/"> Buy a Ticket</a></p>
+          <p><a target="_blank" class="btn" href="https://imaguru.by/product/the-rolling-scopes-conference-2019/"> Buy a
+            Ticket</a></p>
           <!--<p class="placeholder-btn"> Not on sale yet</p>-->
 
 
@@ -118,11 +121,12 @@
           <h2>Follow us</h2>
           <p>Follow us on social media, our hashtag #rollingscopes</p>
           <ul class="social-links">
-            <li><a target="_blank" href="http://frontendbelarus.herokuapp.com/"><i class="fab fa-slack-hash"></i></a></li>
+            <li><a target="_blank" href="http://frontendbelarus.herokuapp.com/"><i class="fab fa-slack-hash"></i></a>
+            </li>
             <li><a target="_blank" href="https://www.facebook.com/groups/TheRollingScopes/"><i
               class="fab fa-facebook-f"></i></a></li>
             <li><a target="_blank" href="https://www.youtube.com/user/therollingscopes"><i class="fab fa-youtube"
-                                                                                            ></i></a>
+            ></i></a>
             </li>
             <li><a target="_blank" href="https://vk.com/therollingscopes"><i class="fab fa-vk"></i></a></li>
             <li><a target="_blank" href="https://twitter.com/rollingscopes"><i class="fab fa-twitter"></i></a></li>
@@ -141,15 +145,15 @@
       <h2 class="text-lg">Speakers</h2>
 
       <ul class="speaker-list">
-      <li>
-      <figure>
-      <img src="images/speakers/andrei-lesnitsky.jpg" alt="Andrei Lesnitsky photo">
-      <figcaption>
-      <h3><a href="speakers/andrei-lesnitsky.html">Andrei Lesnitsky</a></h3>
-      <p>Minsk, Belarus</p>
-      </figcaption>
-      </figure>
-      </li>
+        <li>
+          <figure>
+            <img src="images/speakers/andrei-lesnitsky.jpg" alt="Andrei Lesnitsky photo">
+            <figcaption>
+              <h3><a href="speakers/andrei-lesnitsky.html">Andrei Lesnitsky</a></h3>
+              <p>Minsk, Belarus</p>
+            </figcaption>
+          </figure>
+        </li>
 
         <li>
           <figure>
@@ -161,15 +165,15 @@
           </figure>
         </li>
 
-      <li>
-      <figure>
-      <img src="images/speakers/alexander-gerasimov.jpg" alt="Alex Gerasimov photo">
-      <figcaption>
-      <h3><a href="speakers/alexander-gerasimov.html">Alex Gerasimov</a></h3>
-      <p>Berlin, Germany</p>
-      </figcaption>
-      </figure>
-      </li>
+        <li>
+          <figure>
+            <img src="images/speakers/alexander-gerasimov.jpg" alt="Alex Gerasimov photo">
+            <figcaption>
+              <h3><a href="speakers/alexander-gerasimov.html">Alex Gerasimov</a></h3>
+              <p>Berlin, Germany</p>
+            </figcaption>
+          </figure>
+        </li>
 
         <li>
           <figure>
@@ -183,285 +187,8 @@
       </ul>
 
       <p class="padding-top-md"><a class="btn" target="_blank"
-            href="https://docs.google.com/forms/d/e/1FAIpQLSe1Mx_HLnAm09pB0ngzx_eCBJg29mzUdM0dLfE2BfhjdaCy6A/viewform">Call
+                                   href="https://docs.google.com/forms/d/e/1FAIpQLSe1Mx_HLnAm09pB0ngzx_eCBJg29mzUdM0dLfE2BfhjdaCy6A/viewform">Call
         for Speakers</a></p>
-      <!--<ul class="speaker-list">-->
-        <!--<li>-->
-          <!--<figure>-->
-            <!--<img src="images/speakers/martin_splitt.svg" alt="Martin Splitt photo">-->
-            <!--<figcaption>-->
-              <!--<h3><a href="speaker/martin-splitt.html">Martin Splitt</a></h3>-->
-              <!--<p>Zürich, Switzerland</p>-->
-            <!--</figcaption>-->
-          <!--</figure>-->
-        <!--</li>-->
-
-        <!--<li>-->
-          <!--<figure>-->
-            <!--<img src="images/speakers/asim_hussain.svg" alt="Asim Hussain photo">-->
-            <!--<figcaption>-->
-              <!--<h3><a href="speaker/asim-hussain.html">Asim Hussain</a></h3>-->
-              <!--<p>London, United Kingdom</p>-->
-            <!--</figcaption>-->
-          <!--</figure>-->
-        <!--</li>-->
-        <!--<li>-->
-          <!--<figure>-->
-            <!--<img src="images/speakers/ivan_jovanovic.svg" alt="Ivan Jovanovic photo">-->
-            <!--<figcaption>-->
-              <!--<h3><a href="speaker/ivan-jovanovic.html">Ivan Jovanovic</a></h3>-->
-              <!--<p>Belgrade, Republic of Serbia</p>-->
-            <!--</figcaption>-->
-          <!--</figure>-->
-        <!--</li>-->
-        <!--<li>-->
-          <!--<figure>-->
-            <!--<img src="images/speakers/vsevolod_shmyrov.svg" alt="Vsevolod Shmyrov photo">-->
-            <!--<figcaption>-->
-              <!--<h3><a href="speaker/vsevolod-shmyrov.html">Vsevolod Shmyrov</a></h3>-->
-              <!--<p>Moscow, Russia</p>-->
-            <!--</figcaption>-->
-          <!--</figure>-->
-        <!--</li>-->
-        <!--<li>-->
-          <!--<figure>-->
-            <!--<img src="images/speakers/konstantin_krivlenia.svg" alt="Konstantin Krivlenia photo">-->
-            <!--<figcaption>-->
-              <!--<h3><a href="speaker/konstantin-krivlenia.html">Konstantin Krivlenia</a></h3>-->
-              <!--<p>Minsk, Belarus</p>-->
-            <!--</figcaption>-->
-          <!--</figure>-->
-        <!--</li>-->
-        <!--<li>-->
-          <!--<figure>-->
-            <!--<img src="images/speakers/vasiliy_vanchuk.svg" alt="Vasiliy Vanchuk photo">-->
-            <!--<figcaption>-->
-              <!--<h3><a href="speaker/vasiliy-vanchuk.html">Vasiliy Vanchuk</a></h3>-->
-              <!--<p>Minsk, Belarus</p>-->
-            <!--</figcaption>-->
-          <!--</figure>-->
-        <!--</li>-->
-        <!--<li>-->
-          <!--<figure>-->
-            <!--<img src="images/speakers/egor_malkevich.svg" alt="Egor Malkevich photo">-->
-            <!--<figcaption>-->
-              <!--<h3><a href="speaker/egor-malkevich.html">Egor Malkevich</a></h3>-->
-              <!--<p>Minsk, Belarus</p>-->
-            <!--</figcaption>-->
-          <!--</figure>-->
-        <!--</li>-->
-
-        <!--<li>-->
-          <!--<figure>-->
-            <!--<img src="images/speakers/marek_piasecki.svg" alt="Marek Piasecki photo">-->
-            <!--<figcaption>-->
-              <!--<h3><a href="speaker/marek-piasecki.html">Marek Piasecki</a></h3>-->
-              <!--<p>Poznan, Poland</p>-->
-            <!--</figcaption>-->
-          <!--</figure>-->
-        <!--</li>-->
-        <!--<li>-->
-          <!--<figure>-->
-            <!--<img src="images/speakers/ilja_satchok.svg" alt="Ilja Satchok photo">-->
-            <!--<figcaption>-->
-              <!--<h3><a href="speaker/ilja-satchok.html">Ilja Satchok</a></h3>-->
-              <!--<p>Minsk, Belarus</p>-->
-            <!--</figcaption>-->
-          <!--</figure>-->
-        <!--</li>-->
-        <!--<li>-->
-          <!--<figure>-->
-            <!--<img src="images/speakers/alexander_gerasimov.svg" alt="Alexander Gerasimov photo">-->
-            <!--<figcaption>-->
-              <!--<h3><a href="speaker/alexander-gerasimov.html">Alexander Gerasimov</a></h3>-->
-              <!--<p>Berlin, Germany</p>-->
-            <!--</figcaption>-->
-          <!--</figure>-->
-        <!--</li>-->
-        <!--<li>-->
-          <!--<figure>-->
-            <!--<img src="images/speakers/alexey_migutsky.svg" alt="Alexey Migutsky photo">-->
-            <!--<figcaption>-->
-              <!--<h3><a href="speaker/alexey-migutsky.html">Alexey Migutsky</a></h3>-->
-              <!--<p>Berlin, Germany</p>-->
-            <!--</figcaption>-->
-          <!--</figure>-->
-        <!--</li>-->
-        <!--<li>-->
-          <!--<figure>-->
-            <!--<img src="images/speakers/andrei_vouchanka.svg" alt="Andrei Vouchanka photo">-->
-            <!--<figcaption>-->
-              <!--<h3><a href="speaker/andrei-vouchanka.html">Andrei Vouchanka</a></h3>-->
-              <!--<p>Minsk, Belarus</p>-->
-            <!--</figcaption>-->
-          <!--</figure>-->
-        <!--</li>-->
-        <!--<li>-->
-          <!--<figure>-->
-            <!--<img src="images/speakers/tomasz_lakomy.svg" alt="Tomasz Łakomy photo">-->
-            <!--<figcaption>-->
-              <!--<h3><a href="speaker/tomasz-lakomy.html">Tomasz Łakomy</a></h3>-->
-              <!--<p>Poznan, Poland</p>-->
-            <!--</figcaption>-->
-          <!--</figure>-->
-        <!--</li>-->
-        <!--<li>-->
-          <!--<figure>-->
-            <!--<img src="images/speakers/ilya_pukhalski.svg" alt="Ilya Pukhalski photo">-->
-            <!--<figcaption>-->
-              <!--<h3><a href="speaker/ilya-pukhalski.html">Ilya Pukhalskiy</a></h3>-->
-              <!--<p>Amsterdam, The Netherlands</p>-->
-            <!--</figcaption>-->
-          <!--</figure>-->
-        <!--</li>-->
-        <!--<li>-->
-          <!--<figure>-->
-            <!--<img src="images/speakers/timofey_lavrenyuk.svg" alt="Timofey Lavrenyuk photo">-->
-            <!--<figcaption>-->
-              <!--<h3><a href="speaker/timofey-lavrenyuk.html">Timofey Lavrenyuk</a></h3>-->
-              <!--<p>Odessa, Ukraine</p>-->
-            <!--</figcaption>-->
-          <!--</figure>-->
-        <!--</li>-->
-
-        <!--<li>-->
-          <!--<figure>-->
-            <!--<img src="images/speakers/mikhail_hatsilau.svg" alt="Mikhail Hatsilau photo">-->
-            <!--<figcaption>-->
-              <!--<h3><a href="speaker/mikhail-hatsilau.html">Mikhail Hatsilau</a></h3>-->
-              <!--<p>Gomel, Belarusd</p>-->
-            <!--</figcaption>-->
-          <!--</figure>-->
-        <!--</li>-->
-        <!--<li>-->
-          <!--<figure>-->
-            <!--<img src="images/speakers/anna_selezniova.svg" alt="Anna Selezniova photo">-->
-            <!--<figcaption>-->
-              <!--<h3><a href="speaker/anna-selezniova.html">Anna Selezniova</a></h3>-->
-              <!--<p>Minsk, Belarus</p>-->
-            <!--</figcaption>-->
-          <!--</figure>-->
-        <!--</li>-->
-        <!--<li>-->
-          <!--<figure>-->
-            <!--<img src="images/speakers/alexander_shushunov.svg" alt="Alexander Shushunov photo">-->
-            <!--<figcaption>-->
-              <!--<h3><a href="speaker/alexander-shushunov.html">Alexander Shushunov</a></h3>-->
-              <!--<p>Tver, Russia</p>-->
-            <!--</figcaption>-->
-          <!--</figure>-->
-        <!--</li>-->
-        <!--<li>-->
-          <!--<figure>-->
-            <!--<img src="images/speakers/trishul_goel.svg" alt="Trishul Goel photo">-->
-            <!--<figcaption>-->
-              <!--<h3><a href="speaker/trishul-goel.html">Trishul Goel</a></h3>-->
-              <!--<p>Delhi, India</p>-->
-            <!--</figcaption>-->
-          <!--</figure>-->
-        <!--</li>-->
-
-        <!--<li>-->
-          <!--<figure>-->
-            <!--<img src="images/speakers/dmitry_volokh.svg" alt="Dmitry Volokh photo">-->
-            <!--<figcaption>-->
-              <!--<h3><a href="speaker/dmitry-volokh.html">Dmitry Volokh</a></h3>-->
-              <!--<p>Minsk, Belarus</p>-->
-            <!--</figcaption>-->
-          <!--</figure>-->
-        <!--</li>-->
-        <!--<li>-->
-          <!--<figure>-->
-            <!--<img src="images/speakers/tomasz_jonasz_kujawski.svg" alt="Tomasz Jonasz Kujawski photo">-->
-            <!--<figcaption>-->
-              <!--<h3><a href="speaker/tomasz-jonasz-kujawski.html">Tomasz Jonasz Kujawski</a></h3>-->
-              <!--<p>Warsaw, Poland</p>-->
-            <!--</figcaption>-->
-          <!--</figure>-->
-        <!--</li>-->
-
-        <!--<li>-->
-          <!--<figure>-->
-            <!--<img src="images/speakers/james-akwuh.svg" alt="James Akwuh photo">-->
-            <!--<figcaption>-->
-              <!--<h3><a href="speaker/james-akwuh.html">James Akwuh</a></h3>-->
-              <!--<p>Minsk, Belarus</p>-->
-            <!--</figcaption>-->
-          <!--</figure>-->
-        <!--</li>-->
-        <!--<li>-->
-          <!--<figure>-->
-            <!--<img src="images/speakers/vitali_novikau.svg" alt="Vitali Novikau photo">-->
-            <!--<figcaption>-->
-              <!--<h3><a href="speaker/vitali-novikau.html">Vitali Novikau</a></h3>-->
-              <!--<p>Minsk, Belarus</p>-->
-            <!--</figcaption>-->
-          <!--</figure>-->
-        <!--</li>-->
-        <!--<li>-->
-          <!--<figure>-->
-            <!--<img src="images/speakers/dzmitry_vanitski.svg" alt="Dzmitry Vanitski photo">-->
-            <!--<figcaption>-->
-              <!--<h3><a href="speaker/dzmitry-vanitski.html">Dzmitry Vanitski</a></h3>-->
-              <!--<p>Minsk, Belarus</p>-->
-            <!--</figcaption>-->
-          <!--</figure>-->
-        <!--</li>-->
-        <!--<li>-->
-          <!--<figure>-->
-            <!--<img src="images/speakers/fedor-shepelenko.svg" alt="Fedor Shepelenko photo">-->
-            <!--<figcaption>-->
-              <!--<h3><a href="speaker/fedor-shepelenko.html">Fedor Shepelenko</a></h3>-->
-              <!--<p>Minsk, Belarus</p>-->
-            <!--</figcaption>-->
-          <!--</figure>-->
-        <!--</li>-->
-        <!--<li>-->
-          <!--<figure>-->
-            <!--<img src="images/speakers/yauheniya_zhur.svg" alt="Yauheniya Zhur photo">-->
-            <!--<figcaption>-->
-              <!--<h3><a href="speaker/yauheniya-zhur.html">Yauheniya Zhur</a></h3>-->
-              <!--<p>Minsk, Belarus</p>-->
-            <!--</figcaption>-->
-          <!--</figure>-->
-        <!--</li>-->
-        <!--<li>-->
-          <!--<figure>-->
-            <!--<img src="images/speakers/aliaksandr_pasynkau.svg" alt="Aliaksandr Pasynkau photo">-->
-            <!--<figcaption>-->
-              <!--<h3><a href="speaker/aliaksandr-pasynkau.html">Aliaksandr Pasynkau</a></h3>-->
-              <!--<p>Minsk, Belarus</p>-->
-            <!--</figcaption>-->
-          <!--</figure>-->
-        <!--</li>-->
-        <!--<li>-->
-          <!--<figure>-->
-            <!--<img src="images/speakers/ales_tsvil.svg" alt="Ales Tsvil photo">-->
-            <!--<figcaption>-->
-              <!--<h3><a href="speaker/ales-tsvil.html">Ales Tsvil</a></h3>-->
-              <!--<p>Gomel, Belarus</p>-->
-            <!--</figcaption>-->
-          <!--</figure>-->
-        <!--</li>-->
-        <!--<li>-->
-          <!--<figure>-->
-            <!--<img src="images/speakers/kristi-progi.svg" alt="Kristi Progi photo">-->
-            <!--<figcaption>-->
-              <!--<h3><a href="speaker/kristi-progi.html">Kristi Progi</a></h3>-->
-              <!--<p>Tirana, Albania</p>-->
-            <!--</figcaption>-->
-          <!--</figure>-->
-        <!--</li>-->
-        <!--<li>-->
-          <!--<figure>-->
-            <!--<img src="images/speakers/denis_ilin.svg" alt="Denis Ilin photo">-->
-            <!--<figcaption>-->
-              <!--<h3><a href="speaker/denis-ilin.html">Denis Ilin</a></h3>-->
-              <!--<p>Rostov-on-Don, Russia</p>-->
-            <!--</figcaption>-->
-          <!--</figure>-->
-        <!--</li>-->
-      <!--</ul>-->
     </div>
   </section>
 
@@ -472,8 +199,9 @@
                                                     href="https://t.me/joinchat/HqpGRxPNqkR9TbsVH20Jzg">RS Conf 2019</a>
       </p>
       <p class="text-lg padding-top-lg">Follow us on <a target="_blank"
-                                                        href="https://www.facebook.com/groups/TheRollingScopes/">Facebook</a> and <a
-        target="_blank" href="https://twitter.com/rollingscopes">Twitter</a>
+                                                        href="https://www.facebook.com/groups/TheRollingScopes/">Facebook</a>
+        and <a
+          target="_blank" href="https://twitter.com/rollingscopes">Twitter</a>
         to be the first to learn the news</p>
 
       <p class="content-xsm">Our hashtag on social media is <a
@@ -484,7 +212,7 @@
         <li><a target="_blank" href="https://www.facebook.com/groups/TheRollingScopes/"><i
           class="fab fa-facebook-f"></i></a></li>
         <li><a target="_blank" href="https://www.youtube.com/user/therollingscopes"><i class="fab fa-youtube"
-                                                                                        ></i></a>
+        ></i></a>
         </li>
         <li><a target="_blank" href="https://vk.com/therollingscopes"><i class="fab fa-vk"></i></a></li>
         <li><a target="_blank" href="https://twitter.com/rollingscopes"><i class="fab fa-twitter"></i></a></li>
