add two more speakers to rsconf19

--- a/app/index.html
+++ b/app/index.html
@@ -141,7 +141,7 @@
       <img src="images/logo-snowflake.svg" alt="The Rolling Scopes Conference Logo">
       <h1>The Rolling Scopes <br> Conference</h1>
       <p class="bold text-md">Minsk, 9-11 August 2019</p>
-      <p class="text-md">The lagest JavaScript/Front-end conference in Belarus. Three full days of delicious content for
+      <p class="text-md">The largest JavaScript/Front-end conference in Belarus. Three full days of delicious content for
         amazing
         people of the front-end scene.</p>
       <p>
@@ -196,7 +196,7 @@
             <img src="images/speakers/andre-gloukhmantchouk.jpg" alt="Andre Gloukhmantchouk photo">
             <figcaption>
               <h3><a href="speakers/andre-gloukhmantchouk.html">Andre Gloukhmantchouk</a></h3>
-              <p>Los Angeles, California</p>
+              <p>Los Angeles, The United States</p>
             </figcaption>
           </figure>
         </li>
@@ -213,10 +213,30 @@
 
         <li>
           <figure>
+            <img src="images/speakers/kirill-knysh.jpg" alt="Kirill Knysh photo">
+            <figcaption>
+              <h3><a href="speakers/kirill-knysh.html">Kirill Knysh</a></h3>
+              <p>Amsterdam, The Netherlands</p>
+            </figcaption>
+          </figure>
+        </li>
+
+        <li>
+          <figure>
             <img src="images/speakers/martin-splitt.jpg" alt="Martin Splitt photo">
             <figcaption>
               <h3><a href="speakers/martin-splitt.html">Martin Splitt</a></h3>
               <p>Zürich, Switzerland</p>
+            </figcaption>
+          </figure>
+        </li>
+
+        <li>
+          <figure>
+            <img src="images/speakers/ilya-pukhalski.jpg" alt="Ilya Pukhalski photo">
+            <figcaption>
+              <h3><a href="speakers/ilya-pukhalski.html">Ilya Pukhalski</a></h3>
+              <p>Amsterdam, The Netherlands</p>
             </figcaption>
           </figure>
         </li>
