--- a/app/speakers.html
+++ b/app/speakers.html
@@ -160,7 +160,7 @@
             <img src="images/speakers/andre-gloukhmantchouk.jpg" alt="Andre Gloukhmantchouk photo">
             <figcaption>
               <h3><a href="speakers/andre-gloukhmantchouk.html">Andre Gloukhmantchouk</a></h3>
-              <p>Los Angeles, California</p>
+              <p>Los Angeles, The United States</p>
             </figcaption>
           </figure>
         </li>
@@ -177,10 +177,30 @@
 
         <li>
           <figure>
+            <img src="images/speakers/kirill-knysh.jpg" alt="Kirill Knysh photo">
+            <figcaption>
+              <h3><a href="speakers/kirill-knysh.html">Kirill Knysh</a></h3>
+              <p>Amsterdam, The Netherlands</p>
+            </figcaption>
+          </figure>
+        </li>
+
+        <li>
+          <figure>
             <img src="images/speakers/martin-splitt.jpg" alt="Martin Splitt photo">
             <figcaption>
               <h3><a href="speakers/martin-splitt.html">Martin Splitt</a></h3>
               <p>Zürich, Switzerland</p>
+            </figcaption>
+          </figure>
+        </li>
+
+        <li>
+          <figure>
+            <img src="images/speakers/ilya-pukhalski.jpg" alt="Ilya Pukhalski photo">
+            <figcaption>
+              <h3><a href="speakers/ilya-pukhalski.html">Ilya Pukhalski</a></h3>
+              <p>Amsterdam, The Netherlands</p>
             </figcaption>
           </figure>
         </li>
