--- a/app/about.html
+++ b/app/about.html
@@ -169,7 +169,7 @@
 
   <section>
     <div class="content-md">
-      <p class="text-lg">The lagest JavaScript/Front-end conference in Belarus. Three full days of delicious content for
+      <p class="text-lg">The biggest JavaScript/Front-end conference in Belarus. Three full days of delicious content for
         amazing
         people of the front-end scene.</p>
     </div>
