--- a/app/index.html
+++ b/app/index.html
@@ -141,7 +141,7 @@
       <img src="images/logo-snowflake.svg" alt="The Rolling Scopes Conference Logo">
       <h1>The Rolling Scopes <br> Conference</h1>
       <p class="bold text-md">Minsk, 9-11 August 2019</p>
-      <p class="text-md">The largest JavaScript/Front-end conference in Belarus. Three full days of delicious content for
+      <p class="text-md">The biggest JavaScript/Front-end conference in Belarus. Three full days of delicious content for
         amazing
         people of the front-end scene.</p>
       <p>
